# prism

./: .env.example  .gitignore  Dockerfile.backend  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  smoke.sh  start.sh  stop.sh
alembic/: env.py
alembic/versions/: 4f7a2d1c9b6e_mvp_schema_alignment.py  ad2514f50d73_initial_schema.py
config/: agents.yaml  data_sources.yaml  monitoring.yaml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Analysis.tsx  Dashboard.tsx  Portfolio.tsx  Wizard.tsx
frontend/src/stores/: portfolio.ts
src/: __init__.py  config.py  database.py
src/agents/: __init__.py  base_agent.py  coordinator.py  fundamental_analyst.py  risk_analyst.py  technical_analyst.py
src/agents/communication/: __init__.py  message_bus.py
src/analysis/: __init__.py  portfolio_analyzer.py  recommendation_engine.py
src/api/: dependencies.py  main.py  models.py  schemas.py
src/api/routes/: __init__.py  analysis.py  data.py  portfolios.py  tasks.py
src/core/: __init__.py  prism_kernel.py
src/fetchers/: __init__.py  fund_fetcher.py  market_fetcher.py
src/models/: __init__.py  analysis.py  portfolio.py
src/monitoring/: __init__.py
src/preprocessing/: __init__.py  normalizer.py
src/reasoning/: __init__.py  cot_engine.py
src/services/: __init__.py  analysis_service.py  portfolio_service.py  progress_hub.py  task_store.py
src/storage/: __init__.py  cache_manager.py
