[project]
name = "prism"
version = "0.1.0"
description = "Fund portfolio optimization framework with multi-agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "redis>=5.2.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "langchain>=0.3.7",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.45",
    "akshare>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
